--- a/resources.html
+++ b/resources.html
@@ -38,23 +38,45 @@
         <h1 class="resources">Resources</h1>
         <p>If you suffer from anxiety, help yoursef.</p>
         <div class="link">
-          <a href="https://www.moodjuice.scot.nhs.uk/anxiety.asp"> Self-help Guide NHS </a>
-          <a href="https://www.getselfhelp.co.uk/anxiety.htm"> CBT for Anxiety </a>
+          <a href="https://www.moodjuice.scot.nhs.uk/anxiety.asp"> Self-help Guide NHS</a>
+          <a href="https://www.getselfhelp.co.uk/anxiety.htm"> CBT for Anxiety</a>
         </div>
         <div class="text">
           <p> However, know that anxiety can be hard to control. It is critical to recognize that some problems are more appropriately treated by professionals than through self-help means.Look for help from people and organisations. Talking to friends and seing your doctor might be the start you need.</p>
           <p> While we're at it, here are some charities and organisations working with people who suffer from anxiety.</p>
         </div>
         <div class="link">
-          <a href="https://www.anxietyuk.org.uk/"> Anxiety UK</a>
+          <a href="https://www.anxietyuk.org.uk/">Anxiety UK</a>
           <a href="https://www.mind.org.uk/information-support/types-of-mental-health-problems/anxiety-and-panic-attacks/"> Mind UK</a>
-          <a href="https://www.nopanic.org.uk/"> No Panic UK</a>
-          <a href="http://anxietycare.org.uk/"> Anxiety Care UK</a>
+          <a href="https://www.nopanic.org.uk/">No Panic UK</a>
+          <a href="http://anxietycare.org.uk/">Anxiety Care UK</a>
           <p> I wish you good luck with everything and let's definitely keep in touch. Love, Sky x </p>
-          <p> Subscribe here to hear from me again ??email-box?? </p>
-        </div>
-      </div>
+          <!-- <p> Subscribe here to hear from me again ??email-box?? </p> -->
+          <!-- <div class="subscription-form">
+          <form>
+          <h4>Subscribe</h4>
+          <p class="form">Subscribe here to hear from me again<p>
+          <div class="input group">
+          <span class="input-group-label">
+          <i class="fa fa-envelope"></i>
+        </span>
+        <input class="input-group-field" type="email" placeholder="Email" required>
+        <button class="button">Sign up</button>
+      </form>
     </div>
-  </div>
+  </div> -->
+  <form>
+    <!-- <h4>Subscribe</h4> -->
+    <div class="form-group">
+      <h4>Subscribe</h4>
+      <label for="exampleInputEmail">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Enter email">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
+</div>
+</div>
+</div>
 </body>
 </html>
