--- a/symptoms.html
+++ b/symptoms.html
@@ -32,6 +32,34 @@
       </ul>
     </div>
   </nav>
+
+  <div id="piechart"></div>
+
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
+  <script type="text/javascript">
+
+  google.charts.load('current', {'packages':['corechart']});
+  google.charts.setOnLoadCallback(drawChart);
+
+  function drawChart() {
+    var data = google.visualization.arrayToDataTable([
+    ['Symptoms', 'Prevalence'],
+    ['Thoughts', 3.5],
+    ['Feelings', 4],
+    ['Behaviours', 2.5],
+
+  ]);
+
+    var options = {'title':'Anxiety', 'width':550, 'height':400};
+
+    var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+    chart.draw(data, options);
+  }
+  </script>
+
+
+
   <div class="container">
     <div class="row">
       <div class="col">
